# Word_Generation

./: .gitignore  pyproject.toml  readme.md  requirements.txt  Инструкция.docx
core/: main.py
core/api/: __init__.py
core/api/router/word/: depends.py  view.py
core/services/: conveter.py  word.py
core/settings/: app_config.py
